src/io/ascii/snapshots/sigsum__io__ascii__tests__sigsumsig_from_ascii.snap
---
source: src/io/ascii/mod.rs
expression: "&actual"
---
SigsumSignature {
    log_keyhash: Hash(4e89cc51651f0d95f3c6127c15e1a42e3ddf7046c5b17b752689c402e773bb4d),
    leaf_keyhash: Hash(16e8e5005d909e941b34d040b646dba5b6608e5e3353c7db860f9b8849eae245),
    leaf_signature: Signature(e82c007b640da6375657e95bd9e3768017cd9b9478dffb7496a7de69b2e8608ceb35d336b44a3b1a3b0d4493cbc694bf87daf279684473024557dd427d34d900),
    sth: SignedTreeHead {
        size: 4898,
        root_hash: Hash(5a2221ac3be281d2403abb44f9b6a8b1b1b2db97e5838d029a2df19db5e708bd),
        signature: Signature(67de0c13f8ae8a13ca2ad2aaab35326ba55186d240cbb48f4872a79847a41b5d2b43820dc8f4ae43030d432bbf753c365ba7a248fc12ea7be53f05bb72829409),
        cosignatures: [
            WitnessCosignature {
                keyhash: Hash(b95ef35a9ffb3cf516f423a04128d37d3bffc74d4096bd5e967990c53d09678a),
                timestamp: 1756906440,
                cosignature: Signature(c4d48cb9eec541156e89ec8a7df7194da48130ab4e73a7a2b94ce0bc3be2dfc318e9dd5439c8793c8b089bed18168a89cf30b2706e6df9e664e6ad3ac09fe803),
            },
            WitnessCosignature {
                keyhash: Hash(0d4f46a219ab309cea48cde9712e7d8486fc99802f873175eeab70fb84b4f5a4),
                timestamp: 1756906440,
                cosignature: Signature(1650efc6578514cd975a6a7f69bf4e04b8db9c6785126a4d78cc060c0abf0aee1b1611d3a531eb97da85827518b443739a8f75e0ec63f0034208304bb4dd2402),
            },
        ],
    },
    proof: InclusionProof {
        leaf_index: 4897,
        node_hashes: [
            Hash(4875f29fef049908014b9fdb7107dea5b60a56004ff98bef145326d898a986ca),
            Hash(ad94fdfcf279d0a877aa3f3902b7a76feb272dfd1f84b7f9b2d2f190477830f5),
            Hash(3dbab91870b519040e9a26068c54231812c9adfc156c2dfcab3dc8f7d9c9b430),
            Hash(9103c094b7a2cbf2da7c1e1d492906ac0b9062cb0dee3a8e20f5fbff5b219c79),
            Hash(9ca6b461d616cf790a32a967574087298abb4cd0c3da938b7fed143b7d92b5ec),
        ],
    },
}
