src/io/ascii/snapshots/sigsum__io__ascii__tests__sth_from_ascii.snap
---
source: src/io/ascii/mod.rs
expression: "SignedTreeHead::from_ascii(include_str!(\"testdata/tree-head.ascii\")).unwrap()"
---
SignedTreeHead {
    size: 1285,
    root_hash: Hash(8100f29c0e9017a7512dab0911bf06a4b5b99cd77d8c710635307b5d217af1f6),
    signature: Signature(e327fe13e5c3d2043cbf69fe1b778f77cb10a8e14fc09309dd375c9af25903f9ec35906cfb2c36ab2d210329eb538a6673487d2d101800370c978634b6f9f70d),
    cosignatures: [
        WitnessCosignature {
            keyhash: Hash(1a450ecf1f49a4e4580c35e4d83316a74deda949dbb7d338e89d4315764d88de),
            timestamp: 1687170591,
            cosignature: Signature(cacc54d315609b796f72ac1d71d1bbc15667853ed980bd3e0f957de7a875b84bd2dcde6489fc3ed66428190ce588ac1061b0d5748e73cfb887ebf38d0b53060a),
        },
        WitnessCosignature {
            keyhash: Hash(73b6cbe5e3c8e679fb5967b78c59e95db2969a5c13b3423b5e69523e3d52f531),
            timestamp: 1687170591,
            cosignature: Signature(7f568da17c57ea322a9c2668ae9fc2c1d6ab5556d9a997e7bfa1cbc4dc5cf7b94e0cead42d481bf0d3d90ad2ee0d272e9e687f8f82fddf76d37d722c6815fe0f),
        },
    ],
}
